tests/ui/unsized/relaxed-bounds-invalid-places.stderr
error[E0658]: this relaxed bound is not permitted here
  --> $DIR/relaxed-bounds-invalid-places.rs:6:28
   |
LL | struct S1<T>(T) where (T): ?Sized;
   |                            ^^^^^^
   |
   = help: add `#![feature(more_maybe_bounds)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date
   = note: in this context, relaxed bounds are only allowed on type parameters defined by the closest item

error[E0658]: this relaxed bound is not permitted here
  --> $DIR/relaxed-bounds-invalid-places.rs:8:27
   |
LL | struct S2<T>(T) where u8: ?Sized;
   |                           ^^^^^^
   |
   = help: add `#![feature(more_maybe_bounds)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date
   = note: in this context, relaxed bounds are only allowed on type parameters defined by the closest item

error[E0658]: this relaxed bound is not permitted here
  --> $DIR/relaxed-bounds-invalid-places.rs:10:35
   |
LL | struct S3<T>(T) where &'static T: ?Sized;
   |                                   ^^^^^^
   |
   = help: add `#![feature(more_maybe_bounds)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date
   = note: in this context, relaxed bounds are only allowed on type parameters defined by the closest item

error[E0658]: this relaxed bound is not permitted here
  --> $DIR/relaxed-bounds-invalid-places.rs:14:34
   |
LL | struct S4<T>(T) where for<'a> T: ?Trait<'a>;
   |                                  ^^^^^^^^^^
   |
   = help: add `#![feature(more_maybe_bounds)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date
   = note: in this context, relaxed bounds are only allowed on type parameters defined by the closest item

error[E0658]: this relaxed bound is not permitted here
  --> $DIR/relaxed-bounds-invalid-places.rs:22:21
   |
LL |     fn f() where T: ?Sized {}
   |                     ^^^^^^
   |
   = help: add `#![feature(more_maybe_bounds)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date
   = note: in this context, relaxed bounds are only allowed on type parameters defined by the closest item

error[E0658]: relaxed bounds are not permitted in supertrait bounds
  --> $DIR/relaxed-bounds-invalid-places.rs:25:11
   |
LL | trait Tr: ?Sized {}
   |           ^^^^^^
   |
   = help: add `#![feature(more_maybe_bounds)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date
   = note: traits are `?Sized` by default

error[E0658]: relaxed bounds are not permitted in trait object types
  --> $DIR/relaxed-bounds-invalid-places.rs:29:20
   |
LL | type O1 = dyn Tr + ?Sized;
   |                    ^^^^^^
   |
   = help: add `#![feature(more_maybe_bounds)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: relaxed bounds are not permitted in trait object types
  --> $DIR/relaxed-bounds-invalid-places.rs:30:15
   |
LL | type O2 = dyn ?Sized + ?Sized + Tr;
   |               ^^^^^^
   |
   = help: add `#![feature(more_maybe_bounds)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error[E0658]: relaxed bounds are not permitted in trait object types
  --> $DIR/relaxed-bounds-invalid-places.rs:30:24
   |
LL | type O2 = dyn ?Sized + ?Sized + Tr;
   |                        ^^^^^^
   |
   = help: add `#![feature(more_maybe_bounds)]` to the crate attributes to enable
   = note: this compiler was built on YYYY-MM-DD; consider upgrading it if it is out of date

error: bound modifier `?` can only be applied to `Sized`
  --> $DIR/relaxed-bounds-invalid-places.rs:14:34
   |
LL | struct S4<T>(T) where for<'a> T: ?Trait<'a>;
   |                                  ^^^^^^^^^^

error: bound modifier `?` can only be applied to `Sized`
  --> $DIR/relaxed-bounds-invalid-places.rs:18:33
   |
LL | struct S5<T>(*const T) where T: ?Trait<'static> + ?Sized;
   |                                 ^^^^^^^^^^^^^^^

error: aborting due to 11 previous errors

For more information about this error, try `rustc --explain E0658`.
